--- a/WpfApp.csproj
+++ b/WpfApp.csproj
@@ -97,5 +97,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="pics\icon1.png" />
+    <Resource Include="pics\icon2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="pics\icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
