--- a/WpfApp.csproj
+++ b/WpfApp.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FileModel.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
@@ -99,10 +100,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="pics\icon1.png" />
-    <Resource Include="pics\icon2.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="pics\icon.png" />
